Added caching and speed up querying